force-app/main/default/objects/Lilly_Social_Media_Links__c/Lilly_Social_Media_Links__c.object-meta.xml
<CustomObject>
    <label>Social Media Links</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Social Media Links Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>