force-app/main/default/objects/Lilly_Social_Media_Links__c/fields/Lilly_Account__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Social Media Links</relationshipLabel>
    <relationshipName>Social_Media_Links</relationshipName>
    <type>Lookup</type>
</CustomField>