force-app/main/default/objects/Lilly_Social_Media_Links__c/fields/Lilly_URL__c.field-meta.xml
<CustomField>
    <fullName>Lilly_URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>